assets/css/blueprint.css
/* ... */
a[target=_blank]:after {
  display: inline-block;
  font-family: "sgds-icons";
  content: "";
  padding-left: 0.25rem;
  font-weight: 400; }
a[target=_blank].bp-sec-button:after {
  content: ""; }
a[target=_blank].is-highlight:after {
  content: "";
  display: none; }
a[target=_blank].is-highlight p.key-highlight-title:after {
  display: inline-block;
  font-family: "sgds-icons";
  content: "";
  padding-left: 0.25rem;
  font-weight: 400; }
a[target=_blank].social-link:after {
  content: "";
  display: none; }
a[target=_blank].is-download-button, a[target=_blank].is-media-card {
  margin-left: 0; }
  a[target=_blank].is-download-button:after, a[target=_blank].is-media-card:after {
    content: ""; }

a[href$=".pdf"] {
  position: relative;
  margin-left: 2.25rem; }
  a[href$=".pdf"]:before {
    vertical-align: middle;
    color: #767676;
    font-size: 1.75rem;
    font-family: "sgds-icons";
    content: "";
    position: absolute;
    top: 0;
    left: -2.25rem;
    height: 100%;
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: center; }
    a[href$=".pdf"]:before:hover {
      text-decoration: none; }
  a[href$=".pdf"].is-download-button, a[href$=".pdf"].is-media-card {
    margin-left: 0; }
    a[href$=".pdf"].is-download-button:before, a[href$=".pdf"].is-media-card:before {
      content: ""; }

a[href$=".pdf"][target=_blank]:after {
  content: "";
  display: none; }

.bp-masthead a:after {
  content: ""; }

.navbar-item:not(.sub-link) a[target=_blank]:after {
  color: #767676;
  padding-left: 0.375rem; }

#footer-remove-link a[target=_blank]:after {
  content: "";
  display: none; }

.bp-breadcrumb {
  -webkit-touch-callout: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  align-items: stretch;
  display: flex;
  font-size: 0.9375rem;
  overflow: hidden;
  overflow-x: auto;
  white-space: nowrap;
  margin-bottom: 0.625rem; }
  .bp-breadcrumb:not(:last-child) {
    margin-bottom: 1.5rem; }
  .bp-breadcrumb a {
    align-items: center;
    color: white;
    display: flex;
    justify-content: center;
    padding: 0.5em 0.75em; }
    .bp-breadcrumb a:hover {
      color: #D6D6D6; }
      .is-inverted .bp-breadcrumb a:hover {
        color: #484848; }
    .is-inverted .bp-breadcrumb a {
      color: #767676; }
  .bp-breadcrumb li {
    align-items: center;
    display: flex; }
    .bp-breadcrumb li:first-child a {
      padding-left: 0; }
    .bp-breadcrumb li.is-active a {
      color: #323232;
      cursor: default;
      pointer-events: none; }
    .bp-breadcrumb li + li::before {
      font-size: 0.9375rem;
      color: white;
      content: "/"; }
      .is-inverted .bp-breadcrumb li + li::before {
        color: #767676; }
  .bp-breadcrumb ul, .bp-breadcrumb ol {
    align-items: center;
    display: flex;
    flex-grow: 1;
    flex-shrink: 0;
    justify-content: flex-start; }
  .bp-breadcrumb .icon:first-child {
    margin-right: 0.5em; }
  .bp-breadcrumb .icon:last-child {
    margin-left: 0.5em; }
  .bp-breadcrumb.is-centered ol, .bp-breadcrumb.is-centered ul {
    justify-content: center; }
  .bp-breadcrumb.is-right ol, .bp-breadcrumb.is-right ul {
    justify-content: flex-end; }
  .bp-breadcrumb.is-small {
    font-size: 0.75rem; }
  .bp-breadcrumb.is-medium {
    font-size: 1.25rem; }
  .bp-breadcrumb.is-large {
    font-size: 1.5rem; }
  .bp-breadcrumb.has-arrow-separator {
    font-size: 0.9375rem; }
    .bp-breadcrumb.has-arrow-separator li + li::before {
      content: "→"; }
  .bp-breadcrumb.has-bullet-separator {
    font-size: 0.9375rem; }
    .bp-breadcrumb.has-bullet-separator li + li::before {
      content: "•"; }
  .bp-breadcrumb.has-dot-separator {
    font-size: 0.9375rem; }
    .bp-breadcrumb.has-dot-separator li + li::before {
      content: "·"; }
  .bp-breadcrumb.has-succeeds-separator {
    font-size: 0.9375rem; }
    .bp-breadcrumb.has-succeeds-separator li + li::before {
      content: "≻"; }

.bp-card {
  background-color: white;
  box-shadow: 0 2px 3px rgba(10, 10, 10, 0.1), 0 0 0 1px rgba(10, 10, 10, 0.1);
  color: #484848;
  max-width: 100%;
  position: relative; }
.bp-card-header {
  align-items: stretch;
  box-shadow: 0 1px 2px rgba(10, 10, 10, 0.1);
  display: flex; }
.bp-card-header-title {
  align-items: center;
  color: #323232;
  display: flex;
  flex-grow: 1;
  font-weight: 700;
  padding: 0.75rem; }
  .bp-card-header-title.is-centered {
    justify-content: center; }
.bp-card-header-icon {
  align-items: center;
  cursor: pointer;
  display: flex;
  justify-content: center;
  padding: 0.75rem; }
.bp-card-image {
  display: block;
  position: relative; }
.bp-card-content {
  padding: 1.5rem; }
.bp-card-footer {
  border-top: 1px solid #6b4370;
  align-items: stretch;
  display: flex; }
.bp-card-footer-item {
  align-items: center;
  display: flex;
  flex-basis: 0;
  flex-grow: 1;
  flex-shrink: 0;
  justify-content: center;
  padding: 0.75rem; }
  .bp-card-footer-item:not(:last-child) {
    border-right: 1px solid #6b4370; }
.bp-card .media:not(:last-child) {
  margin-bottom: 0.75rem; }

.bp-dropdown {
  display: block;
  position: relative;
  vertical-align: top; }
  .bp-dropdown.is-active .bp-dropdown-menu, .bp-dropdown.is-hoverable:hover .bp-dropdown-menu {
    display: block; }
  .bp-dropdown.is-right .bp-dropdown-menu {
    left: auto;
    right: 0; }
  .bp-dropdown.is-up .bp-dropdown-menu {
    bottom: 100%;
    padding-bottom: 0px;
    padding-top: unset;
    top: auto; }
  .bp-dropdown .second-level-nav-div-mobile {
    padding-left: 1rem !important;
    display: block;
    visibility: visible; }
.bp-dropdown-menu {
  display: none;
  left: 0;
  min-width: 12rem;
  padding-top: 0px;
  position: absolute;
  width: 100%;
  top: 100%;
  z-index: 20; }
/* ... */

